Fix padding issue on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,8 @@ table, th, td {
 .login a, .links a, .logout a {
     display: block;
     width: 100%;
-    padding: 25% auto;
+    padding-top: 12px;
+    padding-bottom: 12px;
     border: 1px solid blue;
 }
 
